camunda/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: camunda-service
  labels:
    app: camunda
spec:
  selector:
    app: camunda
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
