camunda/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: camunda-ingress
spec:
  rules:
    - host: camunda.local
      http:
        paths:
          - backend:
              serviceName: camunda-service
              servicePort: 8080
